- Refactored `SumOfOddEven` to include new `gen` method for generating arrays. - Fixed `subsets` logic in `Main.java` for correct backtracking and result handling. - Updated project JDK version to 17 in `.idea/misc.xml`.